# pix2pix-mlops

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile copy  Makefile  README.md  docker-compose.yml  dvc.yaml  mkdocs.yml  prometheus.yml  pyproject.toml  requirements copy.txt  requirements-dev.txt  requirements.txt  test_config_hydra.py
.dvc/: config
.github/workflows/: python-app.yml
data/: processed.dvc  raw.dvc
docs/: api_reference.md  configuration.md  dataloader_augmentation.md  dataset_preparation.md  dev_tools.md  discriminator.md  generator.md  logging_monitoring.md  loss_functions.md  mkdocs.yml  mlflow.md  model_architecture.md  project_structure.md  training.md  wandb.md
docs/docs/: index.md
mlops/: config.py  data_processing.py  dataset.py  download_and_prepare_data.py  features.py  plots.py
mlops/config/: config.yaml  dataset.yaml  model.yaml  params.yaml  paths.yaml  training.yaml
mlops/modeling/: predict.py  train.py
mlops/serving/: api.py
mlops/src/components/: discriminator.py  functions.py  generator.py  init_weights.py  losses.py  moving_average.py  replay_pool.py
mlops/src/models/: pix2pixhd_module.py
mlruns/933818386656243480/: meta.yaml
mlruns/933818386656243480/34ea9518e45644df9f26f746c84320d6/: meta.yaml
mlruns/933818386656243480/34ea9518e45644df9f26f746c84320d6/metrics/: D_false  D_true  G_adv  G_adv_feat  G_vgg
mlruns/933818386656243480/34ea9518e45644df9f26f746c84320d6/tags/: mlflow.runName
mlruns/933818386656243480/de9ace4de3c04e85840748357c98bdad/: meta.yaml
mlruns/933818386656243480/de9ace4de3c04e85840748357c98bdad/tags/: mlflow.runName  mlflow.source.git.commit  mlflow.source.name
notebooks/: simplified_pix2pixHD.ipynb  train_pix2pixhd_example.ipynb
reports/: metrics.json
tests/unit/: test_config.py
wandb/: latest-run
wandb/run-20251228_131817-wc5qb6wg/: run-wc5qb6wg.wandb
wandb/run-20251228_131817-wc5qb6wg/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20251228_132140-hca5wbnn/: run-hca5wbnn.wandb
wandb/run-20251228_132140-hca5wbnn/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
